2018/exercise02/exercise02.sdk/.metadata/.plugins/org.eclipse.cdt.ui/interrupts.build.log
12:32:38 **** Build of configuration Debug for project interrupts ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/interrupt_counter_tut_2B.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/interrupt_counter_tut_2B.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../interrupts_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/interrupt_counter_tut_2B.d" -MT"src/interrupt_counter_tut_2B.o" -o "src/interrupt_counter_tut_2B.o" "../src/interrupt_counter_tut_2B.c"
In file included from ../src/interrupt_counter_tut_2B.c:20:0:
../../interrupts_bsp/ps7_cortexa9_0/include/xparameters.h:1:0: error: unterminated #ifndef
 #ifndef XPARAMETERS_H   /* prevent circular inclusions */
 
In file included from ../../interrupts_bsp/ps7_cortexa9_0/include/xil_printf.h:12:0,
                 from ../../interrupts_bsp/ps7_cortexa9_0/include/xil_io.h:65,
                 from ../../interrupts_bsp/ps7_cortexa9_0/include/xgpio_l.h:87,
                 from ../../interrupts_bsp/ps7_cortexa9_0/include/xgpio.h:136,
                 from ../src/interrupt_counter_tut_2B.c:21:
../../interrupts_bsp/ps7_cortexa9_0/include/xparameters.h:1:0: error: unterminated #ifndef
 #ifndef XPARAMETERS_H   /* prevent circular inclusions */
 
../src/interrupt_counter_tut_2B.c: In function 'main':
../src/interrupt_counter_tut_2B.c:29:25: error: 'XPAR_AXI_GPIO_1_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_XSLCR_0_DEVICE_ID'?
 #define LEDS_DEVICE_ID  XPAR_AXI_GPIO_1_DEVICE_ID
                         ^
../src/interrupt_counter_tut_2B.c:83:39: note: in expansion of macro 'LEDS_DEVICE_ID'
   status = XGpio_Initialize(&LEDInst, LEDS_DEVICE_ID);
                                       ^~~~~~~~~~~~~~
../src/interrupt_counter_tut_2B.c:29:25: note: each undeclared identifier is reported only once for each function it appears in
 #define LEDS_DEVICE_ID  XPAR_AXI_GPIO_1_DEVICE_ID
                         ^
../src/interrupt_counter_tut_2B.c:83:39: note: in expansion of macro 'LEDS_DEVICE_ID'
   status = XGpio_Initialize(&LEDInst, LEDS_DEVICE_ID);
                                       ^~~~~~~~~~~~~~
../src/interrupt_counter_tut_2B.c:28:25: error: 'XPAR_AXI_GPIO_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
 #define BTNS_DEVICE_ID  XPAR_AXI_GPIO_0_DEVICE_ID
                         ^
../src/interrupt_counter_tut_2B.c:86:39: note: in expansion of macro 'BTNS_DEVICE_ID'
   status = XGpio_Initialize(&BTNInst, BTNS_DEVICE_ID);
                                       ^~~~~~~~~~~~~~
../src/interrupt_counter_tut_2B.c:27:26: error: 'XPAR_PS7_SCUGIC_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_0_DEVICE_ID'?
 #define INTC_DEVICE_ID   XPAR_PS7_SCUGIC_0_DEVICE_ID
                          ^
../src/interrupt_counter_tut_2B.c:94:29: note: in expansion of macro 'INTC_DEVICE_ID'
   status = IntcInitFunction(INTC_DEVICE_ID, &BTNInst);
                             ^~~~~~~~~~~~~~
../src/interrupt_counter_tut_2B.c: In function 'IntcInitFunction':
../src/interrupt_counter_tut_2B.c:30:32: error: 'XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                ^
../src/interrupt_counter_tut_2B.c:30:32: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/subdir.mk:21: recipe for target 'src/interrupt_counter_tut_2B.o' failed
make: *** [src/interrupt_counter_tut_2B.o] Error 1

12:32:38 Build Finished (took 230ms)

